@@ -139,7 +139,6 @@ function shwcfg() {
 	formcfg.style.display='block'
 }
 
-
 blno.addEventListener("lastblock", function(e) {
 	var stat = e.block
 	if (last_block_height != stat.Height) {
